# coredis

./: .coveragerc  .gitignore  .gitmodules  .readthedocs.yml  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  lol.py  push-release.sh  pyproject.toml  pyrightconfig.json  pytest.ini  setup.cfg  setup.py  tag.sh  test.py  tmp.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/actions/lint/: action.yml
.github/actions/test/: action.yml
.github/workflows/: build.yml  compatibility.yml  lint.yml  main.yml  publish.yml
benchmarks/: basic_operations.py  comparison.py
comparisons/getset/: test_aioredis2.py  test_coredis_cluster.py
coredis/: __init__.py  _async_utils.py  _compat.py  _concurrency.py  _enum.py  _json.py  _otel.py  _packer.py  _protocols.py  _py_311_typing.py  _py_312_typing.py  _sidecar.py  _unpacker.py  _utils.py  _version.py  cache.py  client.py  config.py  connection.py  constants.py  credentials.py  exceptions.py  globals.py  lock.py  nodemanager.py  parser.py  parsers.py  pipeline.py  pipeline.pyi  pool.py  protocols.py  retry.py  sentinel.py  sidecar.py  speedups.pyi  stream.py  tokens.py  typing.py  utils.py  validators.py
coredis/_telemetry/: __init__.py  _base.py  _noop.py  _otel.py
coredis/client/: __init__.py  basic.py  cluster.py  keydb.py  sentinel.py
coredis/cluster/: _discovery.py  _layout.py  _node.py
coredis/commands/: __init__.py  _key_spec.py  _routing.py  _utils.py  _validators.py  _wrappers.py  bitfield.py  constants.py  core.py  function.py  hash.py  key_spec.py  lists.py  monitor.py  pipeline.py  pipeline.pyi  pubsub.py  request.py  script.py  sentinel.py  task.py  transaction.py  types.py  utils.py
coredis/connection/: __init__.py  _base.py  _cluster.py  _request.py  _sentinel.py  _statistics.py  _tcp.py  _uds.py
coredis/constants/: __init__.py  pubsub.py  resp.py  resp_types.py
coredis/experimental/: __init__.py  keydb.py
coredis/lock/: __init__.py
coredis/lock/lua/: release.lua
coredis/modules/: __init__.py  autocomplete.py  base.py  filters.py  graph.py  json.py  search.py  timeseries.py
coredis/modules/response/: types.py
coredis/patterns/: __init__.py  cache.py  pipeline.py  pubsub.py  streams.py
coredis/patterns/lock/: __init__.py
coredis/pool/: __init__.py  _base.py  _basic.py  _cluster.py  _nodemanager.py  _sentinel.py  _statistics.py  _utils.py  basic.py  cluster.py  nodemanager.py
coredis/recipes/: __init__.py  credentials.py  lock.py
coredis/recipes/credentials/: __init__.py  iam_provider.py
coredis/recipes/locks/: __init__.py  extend.lua  lua_lock.py
coredis/recipes/lua/: extend.lua
coredis/response/: _utils.py  types.py  utils.py
coredis/response/_callbacks/: __init__.py  acl.py  cluster.py  command.py  connection.py  geo.py  hash.py  keys.py  module.py  pubsub.py  script.py  sentinel.py  server.py  sets.py  sorted_set.py  streams.py  strings.py  vector_sets.py
coredis/response/callbacks/: __init__.py  acl.py  cluster.py  command.py  connection.py  geo.py  hash.py  keys.py  module.py  pubsub.py  script.py  sentinel.py  server.py  sets.py  sorted_set.py  streams.py  strings.py
docs/source/: api.rst  api_reference.rst  compatibility.rst  conf.py  glossary.rst  history.rst  index.rst  sentinel.rst
docs/source/api/: bitfield.rst  caching.rst  clients.rst  connections.rst  credentials.rst  errors.rst  index.rst  lock.rst  modules.rst  pipeline.rst  pubsub.rst  scripting.rst  streams.rst  typing.rst  utilities.rst
docs/source/handbook/: .cluster.rst.swp  caching.rst  cluster.rst  cluster_routing.rst  connections.rst  credentials.rst  development.rst  encoding.rst  index.rst  locks.rst  migration_guide.rst  modules.rst  noreply.rst  observability.rst  optimization.rst  pipelines.rst  pubsub.rst  response.rst  retries.rst  scripting.rst  sentinel.rst  streams.rst  typing.rst
docs/source/recipes/: credentials.rst  index.rst  locks.rst
examples/: __init__.py  bitfield.py  client_reply.py  cluster_commands.py  cluster_transaction.py  idle_connection_pool.py  iter_functions.py  keys.py  pipeline.py  pubsub.py  pubsub2.py
requirements/: build_ext.txt  ci.txt  dev.txt  dev_extra.txt  docs.txt  main.txt  publishing.txt  recipes.txt  test.txt
scripts/: benchmark.sh  code_gen.py  command_coverage.py  commands.json  show_unreleased.sh  test_data_gen.py
tests/: conftest.py  test_authentication.py  test_cache.py  test_client.py  test_connection.py  test_connection_pool.py  test_credentials.py  test_encoding.py  test_invalidating_cache.py  test_lock.py  test_lru_cache.py  test_lua_lock.py  test_monitor.py  test_parsers.py  test_pipeline.py  test_pubsub.py  test_retry.py  test_scripting.py  test_sentinel.py  test_sidecar.py  test_stream_consumers.py  test_streams.py  test_tracking_cache.py  test_type_adapters.py  test_utils.py
tests/cluster/: conftest.py  test_cluster_connection_pool.py  test_cluster_layout.py  test_cluster_obj.py  test_discovery_service.py  test_lock.py  test_node_manager.py  test_non_atomic_commands.py  test_pipeline.py  test_pubsub.py  test_scripting.py  test_utils.py
tests/commands/: test_acl.py  test_array.py  test_bitmap.py  test_cluster.py  test_connection.py  test_functions.py  test_generic.py  test_geo.py  test_hash.py  test_hyperloglog.py  test_list.py  test_modules.py  test_server.py  test_set.py  test_sorted_set.py  test_streams.py  test_string.py  test_vector_sets.py
tests/experimental/: test_keydb.py
tests/modules/: test_autocomplete.py  test_bloom_filter.py  test_compatibilty.py  test_count_min_sketch.py  test_cuckoo_filter.py  test_graph.py  test_json.py  test_search.py  test_tdigest.py  test_timeseries.py  test_topk.py
tests/modules/data/: city_index.json  vss_queries.json
tests/recipes/: test_lua_lock.py
tests/recipes/credentials/: test_elasticache_iam_provider.py
tests/telemetry/: test_otel.py  test_telemetry_setup.py
tests/tls/: ca.crt  ca.txt  client.crt  invalid-ca.crt  invalid-client.crt  invalid-client.key  redis.crt  server.crt
tests/types/: plugin_hook.py  test_client.yml
(+7 files in other folders)
