[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "mypy==1.16.1",
  "packaging>=21,<26",
  "beartype>=0.20",
  "pympler>1,<2",
  "setuptools",
  "types_deprecated",
  "versioneer[toml]",
]

[tool.mypy]
strict = true
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["coredis/_py_312_typing.py"]

[[tool.mypy.overrides]]
module = [
    "async_timeout",
    "beartype",
    "asyncache",
    "aiobotocore.*",
    "botocore.*",
    "cachetools",
    "deprecated",
    "pympler",
]
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "coredis.response._callbacks.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "coredis.modules.response._callbacks.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "coredis._version"
ignore_errors = true
ignore_missing_imports = true

[tool.ruff]
line-length=100
exclude = ["doc/**","_version.py","versioneer.py"]

[tool.ruff.lint]
typing-modules = ["coredis.typing"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "coredis/_version.py"
versionfile_build = "coredis/_version.py"
parentdir_prefix = "coredis-"
